Refresh Decision Tree

--- a/cart/decision_tree.ipynb
+++ b/cart/decision_tree.ipynb
@@ -36,7 +36,7 @@
    "id": "2b8bc05b-f2df-44d5-953a-ca0e272a87d0",
    "metadata": {},
    "source": [
-    "1. The trees will be constructed based on the feature and divides it until it end\n",
+    "1. The trees will be constructed based on the feature and divides it until it ends\n",
     "2. There will be n trees from n features\n",
     "3. To get what tree should be picked, we will be using some metrics like Gini Impurity, Entropy or Information gain\n",
     "4. Gini Impurity is something that is more popular and straight forward to calculate\n",
